Remove height attribute from the header and fix header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,11 +37,10 @@ body {
 header {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: nowrap;
     width: 100%;
-    height: 100%;
     background-color: #ff6d00;
     position: sticky;
     top: 0;
@@ -249,10 +248,10 @@ footer ul#social-networks a {
     header {
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-items: center;
-        height: 6.2vh;
         background-color: #fff;
+        padding: 0 20px;
     }
 
     div#logo {
@@ -263,15 +262,13 @@ footer ul#social-networks a {
     /* navigation bar */
     .navbar ul {
         text-align: center;
+        margin: 0 !important;
     }
     
     .navbar li {
-        line-height: 263%;
-        height: 263%;
-        width: 150%;
         font-size: 1.4rem;
         list-style: none;
-        margin: 1em;
+        margin-right: 1em;
     }
     
     .navbar a {
